# JUB-BE

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENT.md  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260426_0001_create_users.py  20260426_0002_create_transactions.py  20260426_0003_create_chatbot.py  20260426_0004_create_retrospectives.py  20260426_0005_create_subscriptions.py  20260426_0006_make_birth_year_nullable.py
docs/: api-specification.md  architecture.md  code-convention.md  deployment.md  prd.md  work-order.md
src/app/: main.py
src/app/ai/: chatbot_client.py  classifier.py  question_generator.py  summarizer.py
src/app/core/: celery_app.py  config.py  database.py  deps.py  enums.py  exceptions.py  logging.py  middleware.py  rate_limit.py  security.py
src/app/models/: chatbot.py  retrospective.py  subscription.py  transaction.py  user.py
src/app/repositories/: chatbot_repo.py  retrospective_repo.py  user_repo.py  (+2 more)
tests/: conftest.py  test_health.py
tests/api/: test_auth.py  test_banking.py  test_chatbot.py  test_insights.py  test_onboarding.py  test_operational_middleware.py  test_retrospectives.py  test_subscription.py  test_transactions.py  test_user_journey.py
tests/services/: test_auth_service.py  test_banking_service.py  test_chatbot_service.py  test_classifier.py  test_insight_service.py  test_onboarding_service.py  test_retrospective_service.py  test_subscription_service.py  test_transaction_service.py
(+30 files in other folders)
